update docker files

--- a/PersonDetails.Api/docker-compose.yml
+++ b/PersonDetails.Api/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       - "27017:27017"
     volumes:
       - mongodb-data:/data/db
-      - ./init-mongo.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+      - ./init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
     environment:
       MONGO_INITDB_DATABASE: UserDB
       MONGO_INITDB_ROOT_USERNAME: admin
