--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,17 +33,11 @@ services:
     volumes:
       - mongodb-data:/data/db
       - ./init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
-      - ${HOME}/.aspnet/https:/https
-      - ASPNETCORE_URLS=https://+:443;http://+:80
-      - ASPNETCORE_HTTPS_PORT=5001
-      - Kestrel__Endpoints__Http__Url=http://*:80
-      - ASPNETCORE_ENVIRONMENT= Development
-
     environment:
-      MONGO_INITDB_DATABASE: UserDB
+      MONGO_INITDB_DATABASE: PersonDb
       MONGO_INITDB_ROOT_USERNAME: admin
       MONGO_INITDB_ROOT_PASSWORD: Test123!
 
 volumes:
   mongodb-data:
-    driver: local  
+    driver: local
