--- a/src/PersonDetails.Api/Dockerfile
+++ b/src/PersonDetails.Api/Dockerfile
@@ -1,5 +1,7 @@
 # Use compatible tags for Windows/AMD64
 FROM mcr.microsoft.com/dotnet/aspnet:8.0-windowsservercore-ltsc2019 AS base
+ENV ASPNETCORE_ENVIRONMENT=Development
+
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
@@ -7,8 +9,8 @@ EXPOSE 443
 # Use the .NET SDK to build the application
 FROM mcr.microsoft.com/dotnet/sdk:8.0-windowsservercore-ltsc2019 AS build
 WORKDIR /src
-COPY ["PersonDetails.Api/PersonDetails.Api.csproj", "PersonDetails.Api/"]
-COPY ["PersonDetails.Tests/PersonDetails.Tests.csproj", "PersonDetails.Tests/"]
+COPY ["src/PersonDetails.Api/PersonDetails.Api.csproj", "PersonDetails.Api/"]
+COPY ["src/PersonDetails.Tests/PersonDetails.Tests.csproj", "PersonDetails.Tests/"]
 RUN dotnet restore "PersonDetails.Api/PersonDetails.Api.csproj"
 COPY . .
 WORKDIR "/src/PersonDetails.Api"
@@ -22,5 +24,5 @@ RUN dotnet publish "PersonDetails.Api.csproj" -c Release -o /app/publish /p:UseA
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "PersonDetails.Api.dll"]
  
+ENTRYPOINT ["dotnet", "PersonDetails.Api.dll"]
