unit tests updates

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,22 +10,26 @@ services:
       - "8080:80"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ConnectionStrings__DefaultConnection=Server=db;Database=PersonDb;User=sa;Password=password123;
+      - ConnectionStrings__DefaultConnection=Server=sqlserver;Database=PersonDb;User Id=docker-user;Password=Password123;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False;
       - ConnectionStrings__MongoDb=mongodb://mongo:27017
     depends_on:
-      - db
+      - sqlserver
       - mongo
+    networks:
+      - mynetwork
 
-  db:
+  sqlserver:
     image: mcr.microsoft.com/mssql/server:2019-latest
     environment:
-      SA_PASSWORD: "password123"
+      SA_PASSWORD: "Password123"
       ACCEPT_EULA: "Y"
     ports:
       - "1433:1433"
+    networks:
+      - mynetwork
 
   mongo:
-    image: mongo:latest-windowsservercore
+    image: mongo:latest
     container_name: mongodb-container
     command: mongod --auth --bind_ip_all
     ports:
@@ -37,7 +41,11 @@ services:
       MONGO_INITDB_DATABASE: PersonDb
       MONGO_INITDB_ROOT_USERNAME: admin
       MONGO_INITDB_ROOT_PASSWORD: Test123!
+    networks:
+      - mynetwork
 
 volumes:
   mongodb-data:
-    driver: local
+
+networks:
+  mynetwork:
