--- a/src/PersonDetails.Api/PersonDetails.Api.csproj
+++ b/src/PersonDetails.Api/PersonDetails.Api.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>de3dbd1c-c2d0-429e-b01a-a1a1162ac304</UserSecretsId>
     <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
     <DockerfileContext>.</DockerfileContext>
+    <OutputType>Exe</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
